multinomial no arquivo final

--- a/P3 - Arquivo Final-Copy2.ipynb
+++ b/P3 - Arquivo Final-Copy2.ipynb
@@ -1042,11 +1042,25 @@
    "source": [
     "##### Naive Bayes\n",
     "\n",
-    "O algoritmo de Naive Bayes é um classificador probabilístico baseado no teorema de Bayes, utilizado no processo de *machine learning*. O algoritmo supõe que uma característica independe da outra para acontecer, ou seja, mesmo na presença de uma característica particular em uma classe, isso não afeta na probabilidade de qualquer característica ocorrer. O teorema de bayes é escrito da seguinte forma:\n",
+    "O algoritmo de Naive Bayes é um classificador probabilístico baseado no teorema de Bayes, utilizado no processo de machine learning. O algoritmo supõe que uma característica independe da outra para acontecer, ou seja, mesmo na presença de uma característica particular em uma classe, isso não afeta na probabilidade de qualquer característica ocorrer. O teorema de bayes é escrito da seguinte forma:\n",
     "\n",
-    "$$P(A|B) = P(B|A) * P(A) / P(B)%$$\n",
+    "* colocar a formula de bayes \n",
     "\n",
-    "Esse método será utilizado no projeto, uma vez que permite calcular a probabilidade de um detento reincindir, por exemplo, dada as variáveis analisadas. Com essa probabilidade calculada, é comparada e vista se faz mais sentido de reincidir ou não e, após isso, pode-se fazer uma previsão.\n"
+    "Esse método será utilizado no projeto, uma vez que permite calcular a probabilidade de um detento reincidir, por exemplo, dada as suas características, assumindo que as características não tem nenhuma relação entre elas.\n",
+    "\n",
+    "A partir do nosso modelo, poderíamos reescrever o teorema de bayes da seguinte forma:\n",
+    "\n",
+    "* colocar a formula de bayes nosso modelo\n",
+    "\n",
+    "A variável C é a classe variável que representa se um detento irá ou não reincidir, a partir das condições estabelecidas (probabilidade de reincidência dada as suas características). A variável *p* representa o array correspondente a cada preso. *p* pode ser:\n",
+    "\n",
+    "* colocar os possiveis valores de P\n",
+    "\n",
+    "Substituindo *p* por cada uma dos possíveis arrays, temos:\n",
+    "\n",
+    "* colocar a formula de bayes nosso modelo com valores de P\n",
+    "\n",
+    "Para implementar esse algoritmo, utilizamos a função *MultinomialNB( )* da biblioteca *sklearn.naive_bayes* "
    ]
   },
   {
@@ -1185,8 +1199,17 @@
     "\n",
     "**[4]** *Dataset sobre prisioneiros em Iowa*. Disponível em: https://www.kaggle.com/slonnadube/recidivism-for-offenders-released-from-prison. Acesso em 5 nov. 2019.\n",
     "\n",
-    "**[5]** *Vizualize a Decision Tree*. Disponível em: https://chrisalbon.com/machine_learning/trees_and_forests/visualize_a_decision_tree/. Acesso em 21 nov. 2019."
+    "**[5]** *Vizualize a Decision Tree*. Disponível em: https://chrisalbon.com/machine_learning/trees_and_forests/visualize_a_decision_tree/. Acesso em 21 nov. 2019.\n",
+    "\n",
+    "**[6]** *Modelo de Predição — Naive Bayes*. Disponível em: https://medium.com/turing-talks/turing-talks-16-modelo-de-predi%C3%A7%C3%A3o-naive-bayes-6a3e744e7986. Acesso em 21 nov. 2019.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1205,7 +1228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
